--- a/index.html
+++ b/index.html
@@ -1630,7 +1630,7 @@ SleepWell Team
 <div class="rh-container clearfix">
 <div class="footer_most_bottom">
 <div class="f_text">
-Copyright © 2019, Sleep Advisor. All rights reserved. <br>Important - By using this website, you are agreeing to our Terms of Use
+Copyright © 2019, SleepBro. All rights reserved. <br>Important - By using this website, you are agreeing to our Terms of Use
 </div>
 </div>
 </div>
@@ -1640,7 +1640,7 @@ Copyright © 2019, Sleep Advisor. All rights reserved. <br>Important - By using 
 <span class="rehub_scroll" id="topcontrol" data-scrollto="#top_ankor"><i class="fa fa-chevron-up"></i></span> <div id="rh_social_panel_footer" class="scrollvisible">
 <link href="./Best Mattress (July 2019 Update) _ The Sleep Advisor_files/font-awesome.css" rel="stylesheet">
 
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MPNCFP8"
+<noscript><iframe src=""
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="et_social_pin_images_outer">
 <div class="et_social_pinterest_window">
@@ -1724,7 +1724,7 @@ var tocplus = {"smooth_scroll":"1"};
 
 	document.addEventListener( 'wpcf7submit', wpcf7recaptcha.execute, false );
 
-} )( grecaptcha, '6Lc9D2IUAAAAAKBgjYF-xwX62ZNAfVIbZiDqKddJ' );
+} )( grecaptcha, '6Lc9D2IUAAAfVIbZiDqKddJ' );
 </script>
 <script>
             window.lazyLoadOptions = {
