--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <meta name="viewport" content="width=device-width">
 
 <link rel="profile" href="https://gmpg.org/xfn/11">
-<title>Best Mattress (July 2019 Update) | SleepWell</title><link rel="stylesheet" href="./Best Mattress (July 2019 Update) _ The Sleep Advisor_files/css"><link rel="stylesheet" href="./Best Mattress (July 2019 Update) _ The Sleep Advisor_files/194c0969ffcb908a57a439e9035206d7.css" data-minify="1">
+<title>Best Mattress (July 2
+	019 Update) | SleepWell</title><link rel="stylesheet" href="./Best Mattress (July 2019 Update) _ The Sleep Advisor_files/css"><link rel="stylesheet" href="./Best Mattress (July 2019 Update) _ The Sleep Advisor_files/194c0969ffcb908a57a439e9035206d7.css" data-minify="1">
 
 <script type="text/javascript">
 
@@ -1607,12 +1608,6 @@ SleepWell Team
 </div>
 <div class="footer_widget col_item">
 <div id="text-573" class="widget widget_text"><div class="title">Info &amp; Legal</div> <div class="textwidget"><ul>
-<li style="margin-bottom: 5px;"><a style="#fff;" href="/about-sleep-advisor/"><i class="fa fa-circle" style="color: #f4772c; font-size: 10px; margin-right: 5px;" aria-hidden="true"></i> About Us</a></li>
-<li style="margin-bottom: 5px;"><a style="#fff;" href="/contact-us/"><i class="fa fa-circle" style="color: #f4772c; font-size: 10px; margin-right: 5px;" aria-hidden="true"></i> Contact Us</a></li>
-<li style="margin-bottom: 5px;"><a style="#fff;" href="/terms-conditions/"><i class="fa fa-circle" style="color: #f4772c; font-size: 10px; margin-right: 5px;" aria-hidden="true"></i> Terms &amp; Conditions</a></li>
-<li style="margin-bottom: 5px;"><a style="#fff;" href="/privacy-policy/"><i class="fa fa-circle" style="color: #f4772c; font-size: 10px; margin-right: 5px;" aria-hidden="true"></i> Privacy Policy</a></li>
-<li style="margin-bottom: 5px;"><a style="#fff;" href="/contribute/"><i class="fa fa-circle" style="color: #f4772c; font-size: 10px; margin-right: 5px;" aria-hidden="true"></i> Contribute</a></li>
-<li style="margin-bottom: 5px;"><a style="#fff;" href="/sleep-calculator/"><i class="fa fa-circle" style="color: #f4772c; font-size: 10px; margin-right: 5px;" aria-hidden="true"></i> Sleep Calculator</a></li>
 </ul>
 </div>
 </div>
