--- a/index.html
+++ b/index.html
@@ -1238,7 +1238,7 @@ min-width:2px !important;
 
 <div class="main-nav white_style">
 <div class="rh-container">
-<nav class="top_menu"><ul id="menu-new-menu" class="menu"><li class="menu-item logo-inmenu"><a href="https://www.sleepwell.co/" class="logo_image_inmenu"><img src="./Best Mattress (July 2019 Update) _ The Sleep Advisor_files/sleepwell logo wide.png" alt="The Sleep Advisor"<li id="menu-item-36996" class="menu-item menu-item-type-custom menu-item-object-custom"><a href="/s.html" class="menu-item-one-line">The 12 Best Mattresses for 2019
+<nav class="top_menu"><ul id="menu-new-menu" class="menu"><li class="menu-item logo-inmenu"><a href="https://www.sleepwell.co/" class="logo_image_inmenu"><img src="./Best Mattress (July 2019 Update) _ The Sleep Advisor_files/sleep bro logo.png" alt="The Sleep Advisor"<li id="menu-item-36996" class="menu-item menu-item-type-custom menu-item-object-custom"><a href="/s.html" class="menu-item-one-line">The 12 Best Mattresses for 2019
 </a></li>
 
 </form>
