--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 
 <meta name="viewport" content="width=device-width">
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143541069-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-143541069-1');
+</script>
+
+
 <link rel="profile" href="https://gmpg.org/xfn/11">
 <title>Best Mattress (July 2
 	019 Update) | SleepWell</title><link rel="stylesheet" href="./Best Mattress (July 2019 Update) _ The Sleep Advisor_files/css"><link rel="stylesheet" href="./Best Mattress (July 2019 Update) _ The Sleep Advisor_files/194c0969ffcb908a57a439e9035206d7.css" data-minify="1">
