--- a/index.html
+++ b/index.html
@@ -1273,7 +1273,7 @@ min-width:2px !important;
 <div class="floatleft mr15">
 </a>
 <span class="floatleft authortimemeta">
-SleepWell Team
+SleepBro Team
 </a>
 <div class="date_time_post">Last Updated On July 1, 2019</div>
 </span>
