--- a/index.html
+++ b/index.html
@@ -1355,7 +1355,7 @@ SleepBro Team
 <p>Nectar’s flagship product has a medium firmness (6.5/10), which is the most common preference. Nectar’s medium firmness is perfect for all common sleeping positions. There is very little motion transfer and considering this is an all-foam product, the edge support is fantastic.</p>
 <p><strong>Why is it special? </strong>ctar’s mattress provides a very unique sleeping experience. While it’s a memory foam product, the overall feel of the mattress is different to typical memory foam products. Despite this, with a Nectar, you’ll feel well-supported and cozy, just like any other memory foam product.</p>
 <p>If you’re not convinced, Nectar offers the best return policy in the industry. They have a risk free <strong>365 night return policy</strong> with a lifetime warranty.</p>
-<p>&nbsp;<strong><a href="/nectar-mattress-review/"></a></strong>.</p>
+<p>&nbsp;<strong><a href="/nectar-mattress-review/"></a></strong></p>
 </div>
 </article> <div class="vc_row wpb_row vc_inner vc_row-fluid"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner"><div class="wpb_wrapper"><div class="vc_separator wpb_content_element vc_separator_align_center vc_sep_width_100 vc_sep_pos_align_center vc_separator_no_text vc_sep_color_grey vc_custom_1486027704542  vc_custom_1486027704542"><span class="vc_sep_holder vc_sep_holder_l"><span class="vc_sep_line"></span></span><span class="vc_sep_holder vc_sep_holder_r"><span class="vc_sep_line"></span></span>
 </div></div></div></div></div></div></div></div></div><div class="vc_row wpb_row vc_row-fluid"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner"><div class="wpb_wrapper">
