--- a/index.html
+++ b/index.html
@@ -1355,7 +1355,7 @@ SleepBro Team
 <p>Nectar’s flagship product has a medium firmness (6.5/10), which is the most common preference. Nectar’s medium firmness is perfect for all common sleeping positions. There is very little motion transfer and considering this is an all-foam product, the edge support is fantastic.</p>
 <p><strong>Why is it special? </strong>ctar’s mattress provides a very unique sleeping experience. While it’s a memory foam product, the overall feel of the mattress is different to typical memory foam products. Despite this, with a Nectar, you’ll feel well-supported and cozy, just like any other memory foam product.</p>
 <p>If you’re not convinced, Nectar offers the best return policy in the industry. They have a risk free <strong>365 night return policy</strong> with a lifetime warranty.</p>
-<p>&nbsp;<strong><a href="/nectar-mattress-review/"></a></strong></p>
+<p>&nbsp;<strong><a href="/nectar-mattress-review/"></a></strong>.</p>
 </div>
 </article> <div class="vc_row wpb_row vc_inner vc_row-fluid"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner"><div class="wpb_wrapper"><div class="vc_separator wpb_content_element vc_separator_align_center vc_sep_width_100 vc_sep_pos_align_center vc_separator_no_text vc_sep_color_grey vc_custom_1486027704542  vc_custom_1486027704542"><span class="vc_sep_holder vc_sep_holder_l"><span class="vc_sep_line"></span></span><span class="vc_sep_holder vc_sep_holder_r"><span class="vc_sep_line"></span></span>
 </div></div></div></div></div></div></div></div></div><div class="vc_row wpb_row vc_row-fluid"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner"><div class="wpb_wrapper">
@@ -1572,9 +1572,10 @@ SleepBro Team
 	<div class="wpb_wrapper">
 	<h2><span id="Conclusion">Conclusion</span></h2>
 	<hr>
-	<p>As you can see, there is <strong>no such thing as the “ultimate mattress”</strong> that will suit everyone in every situation. We have to consider the age, sleeping position, medical conditions, and other preferences to be able to choose a particular type, material, and ultimately the mattress brand.</p>
-	<p>We're hoping that this guide was comprehensive enough for you to make your choice now.&nbsp;<strong>Research</strong> a bit more if you have to, and read our reviews and comparisons to get a clear picture. Then, let us know your vote!</p>
-	<p>We would <strong>love to hear from you</strong> if you have any questions so don't hesitate to drop us a message or just <strong>comment here</strong>. <img draggable="false" class="emoji" alt="🙂" src="./Best Mattress (July 2019 Update) _ The Sleep Advisor_files/1f642.svg"></p>
+	<p>As you’ve probably gathered, there isn’t a “perfect mattress” that works for everyone. Factors such as age, sleeping positions, weight and personal preferences means that each sleeper will have a different “right mattress”.</p>
+	<p>We hope that this buying guide included enough information to help you make your mattress choice. The information on our sites is a “cliff notes” version, so research a bit more if you need to.</p>
+	<p>We’d love to hear from you. Feel free to send us an email. Recently bought a mattress? Let us know! <img draggable="false" class="emoji" alt="🙂" src="./Best Mattress (July 2019 Update) _ The Sleep Advisor_files/1f642.svg"></p>
+
 	</div>
 	</article> <div class="vc_row wpb_row vc_inner vc_row-fluid"><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner"><div class="wpb_wrapper"><div class="vc_btn3-container vc_btn3-center"><a class="vc_general vc_btn3 vc_btn3-size-lg vc_btn3-shape-round vc_btn3-style-modern vc_btn3-block vc_btn3-color-warning" href="/best-mattress/#top-picks" title="">Back To The Comparison Table</a></div></div></div></div><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner"><div class="wpb_wrapper"></div></div></div></div></div></div></div></div>
 <div class="guerrillawrap">
