--- a/index.html
+++ b/index.html
@@ -1583,8 +1583,8 @@ SleepBro Team
 </div>
 <div class="guerrillatext">
 <h4>Author: <span><a href="/" title="Visit Sleep Advisor&#39;s website" rel="author external">SleepWell Team</a></span></h4>
-<p>Our team covers as many areas of expertise as we do time zones, but none of us started here as a so-called expert on sleep. What we do share is a willingness to ask questions (lots of them), seek experts, and dig deep into conventional wisdom to see if maybe there might be a better path towards healthy living. We apply what we learn not only to our company culture, but also how we deliver information to our over 12.7M readers.</p>
-<p>Sleep research is changing all the time, and we are 100% dedicated to keeping up with breakthroughs and innovations. You live better if you sleep better. Whatever has brought you here, we wish you luck on your journey towards better rest.
+<p>Our team members aren’t sleep experts. But, we’re very well researched. We’ve spent countless hours on breaking down complicated reviews to give you an easy to digest overview of the best mattresses. </p>
+<p>Sleep research is changing all the time, and so is the mattress landscape. We’re dedicated to staying in tune with the industry. As such, our guide will be periodically updated. Good sleep = good life.
 </p></div>
 </li></ul>
 </div>
