--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <meta name="description" content="July 1, 2019 - Having trouble choosing the BEST mattress that will suit your sleeping style perfectly? Here are our 12 HIGHEST rated brands and picks that will make your current...">
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="article">
-<meta property="og:title" content="Best Mattress (July 2019 Update) | SleepWell">
+<meta property="og:title" content="Best Mattress (July 2019 Update) | Slee">
 <meta property="og:description" content="July 1, 2019 - Having trouble choosing the BEST mattress that will suit your needs perfectly? Here are our 12 HIGHEST rated brands and picks that will make your current...">
 <meta property="og:url" content="https://www.sleepbro.com">
 <meta property="og:site_name" content="SleepBro">
@@ -1582,7 +1582,7 @@ SleepBro Team
 <div class="guerrillagravatar">
 </div>
 <div class="guerrillatext">
-<h4>Author: <span><a href="/" title="Visit Sleep Advisor&#39;s website" rel="author external">SleepWell Team</a></span></h4>
+<h4>Author: <span><a href="/" title="Visit Sleep Advisor&#39;s website" rel="author external">SleepBro Team</a></span></h4>
 <p>Our team members aren’t sleep experts. But, we’re very well researched. We’ve spent countless hours on breaking down complicated reviews to give you an easy to digest overview of the best mattresses. </p>
 <p>Sleep research is changing all the time, and so is the mattress landscape. We’re dedicated to staying in tune with the industry. As such, our guide will be periodically updated. Good sleep = good life.
 </p></div>
