--- a/index.html
+++ b/index.html
@@ -1294,7 +1294,7 @@ SleepBro Team
 <article class="wpb_text_column wpb_content_element post  vc_custom_1561976293657">
 <div class="wpb_wrapper">
 <p><strong><u><em>July 2019 Update</em>:</u></strong></p>
-<p><em>The SleepWell team is excited to announce our <strong>updated mattress picks for 2019!</strong></em></p>
+<p><em>The SleepBro team is excited to announce our <strong>updated mattress picks for 2019!</strong></em></p>
 </div>
 </article>
 <article class="wpb_text_column wpb_content_element post ">
