--- a/index.html
+++ b/index.html
@@ -1379,7 +1379,7 @@ SleepBro Team
 </div></div></div></div></div></div></div></div></div><div class="vc_row wpb_row vc_row-fluid"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner"><div class="wpb_wrapper">
 <article class="wpb_text_column wpb_content_element post ">
 <div class="wpb_wrapper">
-<h3 style="text-align: center;"><strong>Nest Bedding Alexander Signature Hybrid (Best Hybrid)</strong></h3>
+<h3 style="text-align: center;"><strong>The Puffy Mattress ($300 Discount)</strong></h3>
 </div>
 </article>
 <div class="wpb_raw_code wpb_content_element wpb_raw_html">
