--- a/index.html
+++ b/index.html
@@ -1626,8 +1626,8 @@ SleepBro Team
 </div>
 </div>
 <div class="footer_widget col_item last">
-<div id="text-320" class="widget last widget_text"><div class="title">Our Mission</div> <div class="textwidget"><p>There’s no one-size-fits-all when it comes to better health and better rest, but no one has time to sleep, let alone figure out how to upgrade the sleep they’re getting.</p>
-<p>From figuring out how to buy a mattress, suggesting ones that are good for different needs and body types, or breaking down the newest science behind technology and wellness breakthroughs, Sleep Advisor has you covered.</p>
+<div id="text-320" class="widget last widget_text"><div class="title">Our Mission</div> <div class="textwidget"><p>When it comes to better health, a good night's rest is key. There's no one size fits all solution for a better sleep, but we've done our best to help make it as simple as can be.</p>
+<p>Whether it's buying a new mattress, a new pillow, or refurbishing your old mattress (coming soon)!, SleepBro has you covered.</p>
 </div>
 </div>
 </div>
