--- a/index.html
+++ b/index.html
@@ -1579,7 +1579,7 @@ SleepBro Team
 	<p>We’d love to hear from you. Feel free to send us an email. Recently bought a mattress? Let us know! <img draggable="false" class="emoji" alt="🙂" src="./Best Mattress (July 2019 Update) _ The Sleep Advisor_files/1f642.svg"></p>
 
 	</div>
-	</article> <div class="vc_row wpb_row vc_inner vc_row-fluid"><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner"><div class="wpb_wrapper"><div class="vc_btn3-container vc_btn3-center"><a class="vc_general vc_btn3 vc_btn3-size-lg vc_btn3-shape-round vc_btn3-style-modern vc_btn3-block vc_btn3-color-warning" href="/best-mattress/#top-picks" title="">Back To The Comparison Table</a></div></div></div></div><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner"><div class="wpb_wrapper"></div></div></div></div></div></div></div></div>
+	</article> <div class="vc_row wpb_row vc_inner vc_row-fluid"><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner"><div class="wpb_wrapper"><div class="vc_btn3-container vc_btn3-center"><a class="vc_general vc_btn3 vc_btn3-size-lg vc_btn3-shape-round vc_btn3-style-modern vc_btn3-block vc_btn3-color-warning" href="https://www.sleepbro.com/" title="">Back To The Comparison Table</a></div></div></div></div><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner"><div class="wpb_wrapper"></div></div></div></div></div></div></div></div>
 <div class="guerrillawrap">
 <div class="guerrillagravatar">
 </div>
