--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 
 <meta name="viewport" content="width=device-width">
 
-
-	<script async src="https://www.googletagmana
-			   ger.com/gtag/js?id=UA-143541069-1"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143541069-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -15,8 +14,9 @@
 </script>
 
 
+
 <link rel="profile" href="https://gmpg.org/xfn/11">
-<title>Best Mattress (July 2019 Update) | SleepBro</title><link rel="stylesheet" href="./Best Mattress (July 2019 Update) _ The Sleep Advisor_files/css"><link rel="stylesheet" href="./Best Mattress (July 2019 Update) _ The Sleep Advisor_files/194c0969ffcb908a57a439e9035206d7.css" data-minify="1">
+<title>Best Mattress (July 2019 Update) | SleepBro</title><link rel="stylesheet" href="./Best Mattress (August 2019 Update) _ The Sleep Advisor_files/css"><link rel="stylesheet" href="./Best Mattress (July 2019 Update) _ The Sleep Advisor_files/194c0969ffcb908a57a439e9035206d7.css" data-minify="1">
 
 <script type="text/javascript">
 
@@ -24,7 +24,7 @@
 <meta name="description" content="July 1, 2019 - Having trouble choosing the BEST mattress that will suit your sleeping style perfectly? Here are our 12 HIGHEST rated brands and picks that will make your current...">
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="article">
-<meta property="og:title" content="Best Mattress (July 2019 Update) | Slee">
+<meta property="og:title" content="Best Mattress (August 2019 Update) | Slee">
 <meta property="og:description" content="July 1, 2019 - Having trouble choosing the BEST mattress that will suit your needs perfectly? Here are our 12 HIGHEST rated brands and picks that will make your current...">
 <meta property="og:url" content="https://www.sleepbro.com">
 <meta property="og:site_name" content="SleepBro">
@@ -1294,7 +1294,7 @@ SleepBro Team
 </article>
 <article class="wpb_text_column wpb_content_element post  vc_custom_1561976293657">
 <div class="wpb_wrapper">
-<p><strong><u><em>July 2019 Update</em>:</u></strong></p>
+<p><strong><u><em>August 2019 Update</em>:</u></strong></p>
 <p><em>The SleepBro team is excited to announce our <strong>updated mattress picks for 2019!</strong></em></p>
 </div>
 </article>
