--- a/index.html
+++ b/index.html
@@ -1490,27 +1490,19 @@ SleepBro Team
 </p>
 <p>The Botanical Bliss boasts the following certifications:
 
-&nbsp;
 
-2x GOTS organic certifications for it's cotton and wool.
-&nbsp;
-1x GOTS organic certification for it's natural latex.
-&nbsp;
-1x GreenGuard Gold certified.
-&nbsp;
-1x eco-INSTITUT certified.
-&nbsp;
-1x Oeko-Tex Standard 100 certified.
+2x GOTS organic certifications for it's cotton and wool.<br>
+1x GOTS organic certification for it's natural latex.<br>
+1x GreenGuard Gold certified.<br>
+1x eco-INSTITUT certified.<br>
+1x Oeko-Tex Standard 100 certified.<br>
 </p>
 <p>It's the most eco-friendly mattress that we've come across. As additional benefits, there are:
 
-Multiple firmness options.
-&nbsp;
-Multiple thickness options.
-&nbsp;
-Free UPS shipping in the continental US.
-&nbsp;
-Adjustable base compatible. </p>
+Multiple firmness options.<br>
+Multiple thickness options.<br>
+Free UPS shipping in the continental US.<br>
+Adjustable base compatible.<br> </p>
 <p>PlushBed's Botanical Bliss is an almost revolutionary product for hot sleepers. It’s an uber-premium bed that comes with a 100 night trial. What are you waiting for?</p>
 </div>
 </article> <div class="vc_row wpb_row vc_inner vc_row-fluid"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner"><div class="wpb_wrapper"><div class="vc_separator wpb_content_element vc_separator_align_center vc_sep_width_100 vc_sep_pos_align_center vc_separator_no_text vc_sep_color_grey vc_custom_1486027704542  vc_custom_1486027704542"><span class="vc_sep_holder vc_sep_holder_l"><span class="vc_sep_line"></span></span><span class="vc_sep_holder vc_sep_holder_r"><span class="vc_sep_line"></span></span>
