--- a/index.html
+++ b/index.html
@@ -1489,7 +1489,7 @@ SleepBro Team
 <p>If you're a hot sleeper, the Botanical Bliss is the mattress for you. Built up of naturally breathable latex, it's aerated for additional cooling and comfort. If you toss at night, the bounce and support of the mattress make repositioning no problem. To top it off, PlushBed uses only organic cotton and wool, for an eco-friendly sleeping experience. 
 </p>
 <p>The Botanical Bliss boasts the following certifications:<br>
-
+&nbsp;
 
 2x GOTS organic certifications for it's cotton and wool.<br>
 1x GOTS organic certification for it's natural latex.<br>
@@ -1498,7 +1498,7 @@ SleepBro Team
 1x Oeko-Tex Standard 100 certified.<br>
 </p>
 <p>It's the most eco-friendly mattress that we've come across. As additional benefits, there are:<br>
-
+&nbsp;
 Multiple firmness options.<br>
 Multiple thickness options.<br>
 Free UPS shipping in the continental US.<br>
