--- a/index.html
+++ b/index.html
@@ -13,7 +13,23 @@
     gtag('config', 'UA-143541069-1');
   </script>
 
-
+<!-- Facebook Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '2708121679301843');
+  fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=2708121679301843&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Facebook Pixel Code -->
 
   <link rel="profile" href="https://gmpg.org/xfn/11">
   <title>Best Mattress (August 2019 Update) | SleepBro</title><link rel="stylesheet" href="./Best Mattress (August 2019 Update) _ The Sleep Advisor_files/css"><link rel="stylesheet" href="./Best Mattress (July 2019 Update) _ The Sleep Advisor_files/194c0969ffcb908a57a439e9035206d7.css" data-minify="1">
@@ -21,7 +37,7 @@
   <script type="text/javascript">
 
 
-  <meta name="description" content="August 1, 2019 - Having trouble choosing the BEST mattress that will suit your sleeping style perfectly? Here are our 12 HIGHEST rated brands and picks that will make your current...">
+  <meta name="description" content="March 1, 2020 - Having trouble choosing the BEST mattress that will suit your sleeping style perfectly? Here are our 12 HIGHEST rated brands and picks that will make your current...">
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="article">
   <meta property="og:title" content="Best Mattress (August 2019 Update) | Slee">
@@ -37,10 +53,10 @@
   <meta property="og:image:height" content="627">
   <meta property="og:image:alt" content="Our Best Mattress Brands">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:description" content="July 1, 2019 - Having trouble choosing the BEST mattress that will suit your needs perfectly? Here are our 12 HIGHEST rated brands and picks that will make your current...">
-  <meta name="twitter:title" content="Best Mattress (July 2019 Update) | SleepBro">
-  <meta name="twitter:site" content="@sleepwellteam">
-  <meta name="twitter:creator" content="@sleepwellteam">
+  <meta name="twitter:description" content="March 1, 2020 - Having trouble choosing the BEST mattress that will suit your needs perfectly? Here are our 12 HIGHEST rated brands and picks that will make your current...">
+  <meta name="twitter:title" content="Best Mattress (March 2020 Update) | SleepBro">
+  <meta name="twitter:site" content="@SleepBro">
+  <meta name="twitter:creator" content="@SleepBro">
 
   <link rel="dns-prefetch" href="https://www.google.com/">
   <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
