--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!-- End Facebook Pixel Code -->
 
   <link rel="profile" href="https://gmpg.org/xfn/11">
-  <title>Best Mattress (August 2019 Update) | SleepBro</title><link rel="stylesheet" href="./Best Mattress (August 2019 Update) _ The Sleep Advisor_files/css"><link rel="stylesheet" href="./Best Mattress (July 2019 Update) _ The Sleep Advisor_files/194c0969ffcb908a57a439e9035206d7.css" data-minify="1">
+  <title>Best Mattress (June 2020 Update) | SleepBro</title><link rel="stylesheet" href="./Best Mattress (August 2019 Update) _ The Sleep Advisor_files/css"><link rel="stylesheet" href="./Best Mattress (July 2019 Update) _ The Sleep Advisor_files/194c0969ffcb908a57a439e9035206d7.css" data-minify="1">
 
   <script type="text/javascript">
 
@@ -40,8 +40,8 @@
   <meta name="description" content="March 1, 2020 - Having trouble choosing the BEST mattress that will suit your sleeping style perfectly? Here are our 12 HIGHEST rated brands and picks that will make your current...">
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="article">
-  <meta property="og:title" content="Best Mattress (August 2019 Update) | Slee">
-  <meta property="og:description" content="July 1, 2019 - Having trouble choosing the BEST mattress that will suit your needs perfectly? Here are our 12 HIGHEST rated brands and picks that will make your current...">
+  <meta property="og:title" content="Best Mattress (June 2020 Update) | Slee">
+  <meta property="og:description" content="June 2020 - Having trouble choosing the BEST mattress that will suit your needs perfectly? Here are our 12 HIGHEST rated brands and picks that will make your current...">
   <meta property="og:url" content="https://www.sleepbro.com">
   <meta property="og:site_name" content="SleepBro">
   <meta property="article:publisher" content="https://www.facebook.com/slee/">
